--- a/frontend/src/assets/styles/base/font.module.css
+++ b/frontend/src/assets/styles/base/font.module.css
@@ -3,10 +3,9 @@
 }
 
 body {
-    /* font-family: var(--font-family);
-    font-weight: var(--font-weight);
-    font-size: var(--font-size);
-    line-height: var(--line-height);
+    font-family: var(--ref-typography-font);
+}
 
-    color: var(--text-color); */
+a {
+    text-decoration: none;
 }
