feat: HiddenNavigationLink component

--- a/frontend/src/assets/styles/variables/index.module.css
+++ b/frontend/src/assets/styles/variables/index.module.css
@@ -1,6 +1,7 @@
+@import './reference-variables.module.css';
 @import './animation.module.css';
 @import './color.module.css';
-@import './reference-variables.module.css';
 @import './shapes.module.css';
 @import './size.module.css';
 @import './typography.module.css';
+@import './state.module.css';
