feat: checkbox component

--- a/frontend/src/assets/styles/variables/color.module.css
+++ b/frontend/src/assets/styles/variables/color.module.css
@@ -64,4 +64,5 @@
     /* Other */
     --color-scrim: var(--ref-color-key-black);
     --color-shadow: var(--ref-color-key-black);
+    --color-outline-focus: var(--ref-color-key-black);
 }
