--- a/frontend/src/assets/styles/variables/size.module.css
+++ b/frontend/src/assets/styles/variables/size.module.css
@@ -11,6 +11,9 @@
     --padding-4: calc(var(--ref-spacing-padding-increment) * 4);
     --padding-5: calc(var(--ref-spacing-padding-increment) * 5);
     --padding-6: calc(var(--ref-spacing-padding-increment) * 6);
+    --padding-7: calc(var(--ref-spacing-padding-increment) * 7);
+    --padding-8: calc(var(--ref-spacing-padding-increment) * 8);
+    --padding-9: calc(var(--ref-spacing-padding-increment) * 9);
 
     /* Margin sizes */
     --margin: var(--ref-spacing-margin-small);
@@ -18,14 +21,22 @@
     /* Sizes */
     --size-000: -0.5rem;
     --size-00: -0.25rem;
-    --size-1: 0.25rem;
-    --size-2: 0.5rem;
-    --size-3: 1rem;
-    --size-4: 1.25rem;
-    --size-5: 1.5rem;
-    --size-6: 1.75rem;
-    --size-7: 2rem;
-    --size-8: 2.5rem;
+    --size-1: 0.125rem;
+    --size-2: 0.25rem;
+    --size-3: 0.5rem;
+    --size-4: 1rem;
+    --size-5: 1.125rem;
+    --size-6: 1.25rem;
+    --size-7: 1.5rem;
+    --size-8: 1.75rem;
+    --size-9: 2rem;
+    --size-10: 2.5rem;
+    --size-11: 3rem;
+
+    --size-target: var(--size-11);
+    --size-state-layer: var(--size-10);
+    --size-border: var(--size-1);
+    --size-outline-offset: 0.0625rem;
 }
 
 @media bp-medium {
