--- a/frontend/src/assets/styles/patterns/target-layer.module.css
+++ b/frontend/src/assets/styles/patterns/target-layer.module.css
@@ -1,7 +1,22 @@
+/**
+    The target layer allows to increase the interactive area of the element, if the element is bellow a certains size.
+    It also sets a margin around the element to add some clearance for the interactove area.
+*/
+
+/* Component */
 :global(.target-layer) {
     position: relative;
+    margin-block: max(
+        var(--margin-block, 0rem) + (var(--size-target) - var(--height)) / 2,
+        0rem
+    );
+    margin-inline: max(
+        var(--margin-inline, 0rem) + (var(--size-target) - var(--width)) / 2,
+        0rem
+    );
 }
 
+/* Layer */
 :global(.target-layer)::after {
     content: '';
 
