--- a/frontend/src/components/HiddenNavigationLink/HiddenNavigationLink.module.css
+++ b/frontend/src/components/HiddenNavigationLink/HiddenNavigationLink.module.css
@@ -1,110 +1,95 @@
-@keyframes enter-within-bounds-left {
-    from {
-        transform-origin: center left;
-        scale: 0 1;
-        translate: -10% 0;
-        opacity: 0;
+@layer components {
+    @keyframes enter-within-bounds-left {
+        from {
+            transform-origin: center left;
+            scale: 0 1;
+            translate: -10% 0;
+            opacity: 0;
+        }
+
+        to {
+            transform-origin: center left;
+            scale: 1 1;
+            translate: 0 0;
+            opacity: 1;
+        }
     }
 
-    to {
-        transform-origin: center left;
-        scale: 1 1;
-        translate: 0 0;
-        opacity: 1;
+    @keyframes exit-within-bounds-left {
+        from {
+            transform-origin: center left;
+            scale: 1 1;
+            translate: 0 0;
+            opacity: 1;
+        }
+
+        to {
+            transform-origin: center left;
+            scale: 0 1;
+            translate: -10% 0;
+            opacity: 0;
+        }
     }
-}
 
-@keyframes exit-within-bounds-left {
-    from {
-        transform-origin: center left;
-        scale: 1 1;
-        translate: 0 0;
-        opacity: 1;
+    .hiddenLink {
+        composes: label-large from '../../assets/styles/patterns/typography.module.css';
+
+        /* Custom properties */
+        --height: var(--size-11);
+        --width: var(--size-target);
+
+        --border-radius: var(--border-radius-5);
+
+        --padding-inline: var(--padding-6);
+        --page-margin: var(--page-margin);
+        --margin-bloc: max((var(--size-target) - var(--height)) / 2, 0px);
+        --margin-inline: max((var(--size-target) - var(--width)) / 2, 0px);
+        --stack-layer: var(--layer-5);
+
+        --text-color: var(--color-on-tertiary);
+
+        --background-color: var(--color-tertiary);
+
+        --state-layer-color: var(--text-color);
+        --state-layer-border-radius: var(--border-radius);
+
+        /* Hidden link properties */
+        display: grid;
+        place-content: center;
+
+        position: fixed;
+        top: var(--page-margin);
+        left: var(--page-margin);
+        z-index: var(--stack-layer);
+
+        min-height: var(--height);
+        min-width: var(--width);
+        padding-inline: var(--padding-inline);
+        margin-block: var(--margin-bloc);
+        margin-inline: var(--margin-inline);
+
+        border-radius: var(--border-radius);
+
+        background-color: rgb(var(--background-color));
+        color: rgb(var(--text-color));
     }
 
-    to {
-        transform-origin: center left;
-        scale: 0 1;
-        translate: -10% 0;
-        opacity: 0;
+    /* Animating entry and exit */
+    .blured {
+        animation-name: exit-within-bounds-left;
+        animation-duration: var(--motion-duration-2);
+        animation-timing-function: var(--motion-easing-emphasized-accelerate);
     }
-}
 
-.hiddenLink {
-    composes: label-large from '../../assets/styles/patterns/typography.module.css';
+    .focused {
+        animation-name: enter-within-bounds-left;
+        animation-duration: var(--motion-duration-6);
+        animation-timing-function: var(--motion-easing-emphasized-decelerate);
+    }
 
-    /* Custom properties */
-    --height: var(--size-11);
-    --width: var(--size-target);
-
-    --border-radius: var(--border-radius-5);
-
-    --padding-inline: var(--padding-6);
-    --page-margin: var(--page-margin);
-    --margin-bloc: max((var(--size-target) - var(--height)) / 2, 0px);
-    --margin-inline: max((var(--size-target) - var(--width)) / 2, 0px);
-    --stack-layer: var(--layer-5);
-
-    --text-color: var(--color-on-tertiary);
-
-    --background-color: var(--color-tertiary);
-
-    --state-layer-color: var(--text-color);
-    --state-layer-border-radius: var(--border-radius);
-
-    /* Hidden link properties */
-    display: grid;
-    place-content: center;
-
-    position: fixed;
-    top: var(--page-margin);
-    left: var(--page-margin);
-    z-index: var(--stack-layer);
-
-    min-height: var(--height);
-    min-width: var(--width);
-    padding-inline: var(--padding-inline);
-    margin-block: var(--margin-bloc);
-    margin-inline: var(--margin-inline);
-
-    border-radius: var(--border-radius);
-
-    background-color: rgb(var(--background-color));
-    color: rgb(var(--text-color));
-}
-
-/* Animating entry and exit */
-.blured {
-    animation-name: exit-within-bounds-left;
-    animation-duration: var(--motion-duration-2);
-    animation-timing-function: var(--motion-easing-emphasized-accelerate);
-}
-
-.focused {
-    animation-name: enter-within-bounds-left;
-    animation-duration: var(--motion-duration-6);
-    animation-timing-function: var(--motion-easing-emphasized-decelerate);
-}
-
-/* Target layer */
-.hiddenLink::after {
-    content: '';
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-
-    min-height: var(--size-target);
-    min-width: var(--size-target);
-    width: 100%;
-    height: 100%;
-
-    opacity: 0;
-}
-
-/* States */
-.hiddenLink:focus-visible {
-    outline: rgb(var(--color-outline-focus)) var(--size-2) solid;
-    outline-offset: var(--size-1);
+    /* States */
+    .hiddenLink:focus-visible {
+        outline: rgb(var(--color-outline-focus)) var(--size-2) solid;
+        outline-offset: var(--size-1);
+    }
 }
