--- a/frontend/src/components/buttons/Button/Button.module.css
+++ b/frontend/src/components/buttons/Button/Button.module.css
@@ -1,82 +1,61 @@
-/* Button styling */
-.button {
-    composes: label-large from '../../../assets/styles/patterns/typography.module.css';
+@layer components {
+    /* Button styling */
+    .button {
+        composes: label-large from '../../../assets/styles/patterns/typography.module.css';
 
-    /* Custom properties */
-    --height: var(--button-height, var(--size-11));
-    --width: var(--size-target);
+        /* Custom properties */
+        --height: var(--button-height, var(--size-11));
+        --width: var(--size-target);
 
-    --border-radius: var(--button-border-radius, var(--height));
-    --border-color: var(--button-border-color, var(--color-outline));
-    --border-opacity: var(--button-border-opacity, 1);
-    --border-width: var(--button-border-width, var(--size-1));
+        --border-radius: var(--button-border-radius, var(--height));
+        --border-color: var(--button-border-color, var(--color-outline));
+        --border-opacity: var(--button-border-opacity, 1);
+        --border-width: var(--button-border-width, var(--size-1));
 
-    --padding-start: var(--button-padding-start, var(--padding-6));
-    --padding-end: var(--button-padding-end, var(--padding-6));
+        --padding-start: var(--button-padding-start, var(--padding-6));
+        --padding-end: var(--button-padding-end, var(--padding-6));
 
-    --text-align: var(--button-text-align, center);
-    --text-color: var(--button-text-color, var(--color-on-primary));
-    --text-opacity: var(--button-text-opacity, 1);
+        --text-align: var(--button-text-align, center);
+        --text-color: var(--button-text-color, var(--color-on-primary));
+        --text-opacity: var(--button-text-opacity, 1);
 
-    --background-color: var(--button-background-color, var(--color-primary));
-    --background-opacity: var(--button-background-opacity, 1);
+        --background-color: var(
+            --button-background-color,
+            var(--color-primary)
+        );
+        --background-opacity: var(--button-background-opacity, 1);
 
-    --shadow: var(--button-shadow, none);
+        --shadow: var(--button-shadow, none);
 
-    --state-layer-color: var(--text-color);
-    --state-layer-border-radius: var(--border-radius);
+        --state-layer-color: var(--text-color);
+        --state-layer-border-radius: calc(
+            var(--border-radius) - var(--border-width)
+        );
 
-    /* Button properties */
-    min-height: var(--height);
-    min-width: var(--width);
-    padding-inline-start: var(--padding-start);
-    padding-inline-end: var(--padding-end);
+        /* Button properties */
+        min-height: var(--height);
+        min-width: var(--width);
+        padding-inline-start: var(--padding-start);
+        padding-inline-end: var(--padding-end);
 
-    text-align: var(--text-align);
-    color: rgb(var(--text-color) / var(--text-opacity));
+        text-align: var(--text-align);
+        color: rgb(var(--text-color) / var(--text-opacity));
 
-    border-radius: var(--border-radius);
-    border-style: solid;
-    border-color: rgb(var(--border-color) / var(--border-opacity));
-    border-width: var(--border-width);
+        border-radius: var(--border-radius);
+        border-style: solid;
+        border-color: rgb(var(--border-color) / var(--border-opacity));
+        border-width: var(--border-width);
 
-    background-color: rgb(var(--background-color) / var(--background-opacity));
+        background-color: rgb(
+            var(--background-color) / var(--background-opacity)
+        );
 
-    box-shadow: var(--shadow);
-}
-
-/* States */
-.button:focus-visible {
-    outline: rgb(var(--color-outline-focus)) var(--size-2) solid;
-    outline-offset: var(--size-1);
-}
-
-/* Ripple animation */
-.button:global(.ripple):not(:disabled)::before {
-    background-image: radial-gradient(
-        circle farthest-side at center,
-        rgb(var(--state-layer-color) / var(--state-pressed-opacity)),
-        rgb(var(--state-layer-color) / var(--state-pressed-opacity)) 50%,
-        transparent 50%,
-        transparent
-    );
-    background-repeat: no-repeat;
-    animation: var(--animation-duration, --motion-duration-5)
-        var(--motion-easing-standard) 0s 1 normal forwards ripple;
-}
-
-@keyframes ripple {
-    from {
-        background-size: 0 0;
-        background-position: var(--origin-x) var(--origin-y);
-        opacity: 1;
+        box-shadow: var(--shadow);
     }
 
-    to {
-        background-size: calc(var(--ripple-width) * 2)
-            calc(var(--ripple-width) * 2);
-        background-position: calc(var(--origin-x) - var(--ripple-width))
-            calc(var(--origin-y) - var(--ripple-width));
-        opacity: 0.5319;
+    /* States */
+    .button:focus-visible {
+        outline: rgb(var(--color-outline-focus)) var(--size-2) solid;
+        outline-offset: var(--size-1);
     }
 }
